[Fronted] Fixes for misaligned bubbles
WTD-1247
WTD-884
Changed CSS .l-infobubble-wrapper abs > relative;
Added display: block class for mct-container;
Tweaked bubble evaluation JS for 'goLeft' behavior;
Added constants for bubble max width and left/right margin;

--- a/platform/commonUI/general/res/css/theme-espresso.css
+++ b/platform/commonUI/general/res/css/theme-espresso.css
@@ -319,6 +319,10 @@ span {
   */ }
 
 /* line 72, ../sass/_global.scss */
+mct-container {
+  display: block; }
+
+/* line 76, ../sass/_global.scss */
 .abs, .btn-menu span.l-click-area {
   position: absolute;
   top: 0;
@@ -328,46 +332,46 @@ span {
   height: auto;
   width: auto; }
 
-/* line 82, ../sass/_global.scss */
+/* line 86, ../sass/_global.scss */
 .code, .codehilite {
   font-family: "Lucida Console", monospace;
   font-size: 0.7em;
   line-height: 150%;
   white-space: pre; }
 
-/* line 89, ../sass/_global.scss */
+/* line 93, ../sass/_global.scss */
 .codehilite {
   background-color: rgba(255, 255, 255, 0.1);
   padding: 1em; }
 
-/* line 95, ../sass/_global.scss */
+/* line 99, ../sass/_global.scss */
 .align-right {
   text-align: right; }
 
-/* line 99, ../sass/_global.scss */
+/* line 103, ../sass/_global.scss */
 .centered {
   text-align: center; }
 
-/* line 103, ../sass/_global.scss */
+/* line 107, ../sass/_global.scss */
 .no-margin {
   margin: 0; }
 
-/* line 107, ../sass/_global.scss */
+/* line 111, ../sass/_global.scss */
 .colorKey {
   color: #0099cc; }
 
-/* line 111, ../sass/_global.scss */
+/* line 115, ../sass/_global.scss */
 .ds {
   -moz-box-shadow: rgba(0, 0, 0, 0.7) 0 4px 10px 2px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.7) 0 4px 10px 2px;
   box-shadow: rgba(0, 0, 0, 0.7) 0 4px 10px 2px; }
 
-/* line 115, ../sass/_global.scss */
+/* line 119, ../sass/_global.scss */
 .hide,
 .hidden {
   display: none !important; }
 
-/* line 120, ../sass/_global.scss */
+/* line 124, ../sass/_global.scss */
 .sep {
   color: rgba(255, 255, 255, 0.2); }
 
@@ -3839,7 +3843,7 @@ input[type="date"] {
   -moz-box-shadow: rgba(0, 0, 0, 0.4) 0 1px 5px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0 1px 5px;
   box-shadow: rgba(0, 0, 0, 0.4) 0 1px 5px;
-  position: absolute;
+  position: relative;
   z-index: 50; }
   /* line 29, ../sass/helpers/_bubbles.scss */
   .l-infobubble-wrapper .l-infobubble {
