--- a/platform/commonUI/general/res/sass/_global.scss
+++ b/platform/commonUI/general/res/sass/_global.scss
@@ -69,6 +69,10 @@ span {
 	*/
 }
 
+mct-container {
+	display: block;
+}
+
 .abs {
 	position: absolute;
 	top: 0;
